@@ -8,30 +8,5 @@
                     org.clojure/tools.cli]]]
 
         :signing      {:gpg-key   "CF1B5B02"}
-        :dependencies [[criterium    "0.4.4"]]
-
-        ;; :jvm-opts     ["-server"
-        ;;                "-d64"
-        ;;                "-Dclojure.compiler.direct-linking=true"
-
-        ;;                "-Xshare:off"
-        ;;                "-XX:+AggressiveOpts"
-        ;;                "-XX:+DoEscapeAnalysis"
-        ;;                "-XX:+UseCompressedOops"
-        ;;                ;; "-XX:+UseNUMA" ;; to check: numactl --hardware
-
-        ;;                "-Xms1G"
-        ;;                "-Xmx1G"
-
-        ;;                "-XX:+UseParallelGC"
-        ;;                "-XX:+UseParallelOldGC"
-        ;;                "-XX:NewSize=400m"
-        ;;                "-XX:MaxNewSize=400m"
-        ;;                "-XX:-UseAdaptiveSizePolicy"
-        ;;                "-XX:SurvivorRatio=6"
-
-        ;;                "-XX:+PrintGCDetails"
-        ;;                "-XX:+PrintGCTimeStamps"]
-
-        }
+        :dependencies [[criterium    "0.4.4"]]}
  }
